crates/normalize-cfg/tests/snapshots/java_cfg__java_branch.snap
---
source: crates/normalize-cfg/tests/java_cfg.rs
assertion_line: 104
expression: mermaid
---
flowchart TD
    b0{"Branch<br/>lines 1-3"}
    b1(["exit"])
    b2["Statement<br/>lines 3-5"]
    b3["Statement<br/>lines 7-9"]
    b4["Statement<br/>lines 5-7"]

    b0 -->|"true"| b2
    b0 -->|"false"| b4
    b2 --> b3
    b4 --> b3
    b3 --> b1
