crates/normalize-cfg/tests/snapshots/java_cfg__java_linear.snap
---
source: crates/normalize-cfg/tests/java_cfg.rs
assertion_line: 98
expression: mermaid
---
flowchart TD
    b0(["entry"])
    b1(["exit"])

    b0 -->|"return"| b1
