crates/normalize-cfg/tests/snapshots/java_cfg__java_loop.snap
---
source: crates/normalize-cfg/tests/java_cfg.rs
assertion_line: 110
expression: mermaid
---
flowchart TD
    b0(["entry"])
    b1(["exit"])
    b2{"LoopHead<br/>line 4"}
    b3["LoopExit<br/>lines 9-10"]
    b4["LoopBody<br/>lines 4-9"]

    b0 --> b2
    b2 -->|"true"| b4
    b2 -->|"false"| b3
    b4 -->|"back"| b2
    b3 -->|"return"| b1
